# TextHumanize

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  composer.json  package.json  pyproject.toml  start-texthumanize.command
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  quality_improvement.yml
.github/workflows/: publish.yml  release-verify.yml
docs/: API_REFERENCE.md  FULL_REFERENCE.md  RELEASE_CHECKLIST.md
docs-src/: api-reference.md  benchmark-methodology.md  cli.md  index.md  responsible-use.md
docs-src/contributing/: good-first-issues.md
docs-src/features/: watermarks.md
docs-src/getting-started/: profiles.md
js/: package-lock.json  package.json
js/src/: version.ts
js/tests/: core.test.ts  parity.test.ts
php/: composer.json
php/src/: TextHumanize.php
php/src/Pipeline/: Segmenter.php
php/tests/: ParityFixturesTest.php  TextHumanizeTest.php
scripts/: build_leaderboard.py  check_version_sync.py  dev_check.py  profile_hot_paths.py  release_smoke_test.py  release_snapshot.py  update_marker_packs.py
tests/: test_api_wrappers.py  test_ash.py  test_bad_output_bank.py  test_benchmark.py  test_cli.py  test_core.py  test_cross_runtime_parity.py  test_domain_dictionaries.py  test_golden.py  test_media_watermark.py  test_naturalizer_full.py  test_neural.py  test_output_quality.py  test_product.py  test_profile_hot_paths.py  test_property.py  test_quality_metrics.py  test_redos.py  test_regression_quality.py  test_segmenter.py  test_stylistic.py  test_update_marker_packs.py  test_v015_features.py  test_v090_features.py  test_version_assert_guard.py  test_watermark.py  test_web_rendering.py
tests/fixtures/: core_language_regressions.json  parity_cases.json
texthumanize/: __init__.py  _human_profiles.py  ash_engine.py  async_api.py  bad_output_bank.py  benchmarks.py  cli.py  collocation_engine.py  core.py  diff_report.py  domain_dictionaries.py  media_watermark.py  naturalizer.py  neural_engine.py  neural_lm.py  normalizer.py  pipeline.py  product.py  quality_metrics.py  segmenter.py  signature_transfer.py  stylistic.py  utils.py  validator.py
texthumanize/data/: bad_output_bank_v1.json  contributor_watermark_samples_v1.json
web/: app.py  ui_rendering.py
